chore: bump version to 1.2.0 and lower Java baseline to 17
- Updated gradle.properties with javaVersion=17 and version=1.2.0\n- Refactored ci.yml to use matrix [17, 21] and separate publishing\n- Fixed Java 21+ method calls in core and tests\n- Resolved Pattern Matching issues in autoconfigure module